[package]
name = "rumbo_http_client"
version = "0.1.0"
edition = "2024"
description = "A minimal HTTP client library for basic requests"
license = "MIT OR Apache-2.0"
keywords = ["http", "client", "async", "minimal"]
categories = ["network-programming", "web-programming::http-client"]

[dependencies]
tokio = { version = "1.0", features = ["net", "io-util", "rt"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
anyhow = "1.0"
url = "2.5.4"
thiserror = "2.0.12"

native-tls = { version = "0.2.14", optional = true }
tokio-native-tls = { version = "0.3.1", optional = true }

[features]
default = []
tls = ["native-tls", "tokio-native-tls"]

# Optimize for size
[profile.release]
opt-level = "z"
lto = true   
codegen-units = 1
panic = "abort"
strip = true 
